--- a/lab_work.ipynb
+++ b/lab_work.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "id": "-G3lHlpmL07T"
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "id": "3a-dnCG0L07Z"
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "l4uGAbw2L07e",
     "outputId": "584542e8-5232-4192-d706-9bdace902161"
@@ -278,7 +278,7 @@
        "2013-04-29    4.37    4.57    4.23    4.38     0.0  7.495270e+07  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,16 +329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "oN2d3V71L07m"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70 different coins in the dataset\n"
+     "ename": "NameError",
+     "evalue": "name 'coins' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m coin_types \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(coins\u001b[39m.\u001b[39mname\u001b[39m.\u001b[39munique())\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mcoin_types\u001b[39m}\u001b[39;00m\u001b[39m different coins in the dataset\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'coins' is not defined"
      ]
     }
    ],
@@ -1277,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {
     "id": "gp86AGWyL08I",
     "scrolled": false
@@ -1291,17 +1295,12 @@
     "    price = coin['price']\n",
     "    leading_mean = price.rolling(window=lead_window).mean()\n",
     "    lagging_mean = price.rolling(window=lag_window).mean()\n",
-    "    positions = np.where(leading_mean > lagging_mean, 1, 0)\n",
-    "    positions = np.where(leading_mean - lagging_mean < threshold, 0, positions)\n",
-    "    positions = pd.Series(positions, index=price.index)\n",
-    "    positions = positions.diff().fillna(0)\n",
     "    fig = plt.figure(figsize=(16, 9))\n",
     "    ax = fig.add_subplot(111)\n",
     "    ax.set_title('Moving averages for {}'.format(symbol))\n",
     "    ax.plot(leading_mean, color='green', label=f'MA{lead_window}')\n",
     "    ax.plot(lagging_mean, color='red', label=f'MA{lag_window}')\n",
     "    ax.plot(price, color='blue', label='price')\n",
-    "    ax.plot(positions * price, color='black', label='positions')\n",
     "    ax.set_xlabel('Date')\n",
     "    ax.set_ylabel('Price')\n",
     "    ax.legend(loc='best')\n",
@@ -1311,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {
     "id": "m2CDc_kkL08J"
    },
@@ -1319,7 +1318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e95ce113972e4c58ade035053ed5c8eb",
+       "model_id": "7e70d6baf6454acbb27d80f476b8373f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1336,7 +1335,7 @@
        "<function __main__.plot_moving_averages_strategy(coins, symbol, lead_window, lag_window, threshold, start_date, end_date)>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
